<resources>
    <string name="app_name">Diplomska</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="motion">Motion sensor</string>
    <string name="microphone">Microphone</string>
    <string name="gps">GPS</string>
    <string name="ok">"OK"</string>
    <string name="sensors">Sensor availability</string>
    <string name="warning_disabled_sensors">Some of the required sensors are disabled or unavailable.\n
            This will limit the information this application will be able to provide.</string>
    <string name="register_warning_empty_input">Please fill in all the fields.</string>
    <string name="register_warning_password_short">The password must be at least 6 characters long.</string>
    <string name="register_warning_password_long">The password must be max 20 characters long.</string>
    <string name="register_warning_passwords_do_not_match">Passwords do not match.</string>
    <string name="register_warning_password_upper_case">Password must contain at least one upper case character.</string>
    <string name="register_warning_password_lower_case">Password must contain at least one lower case character.</string>
    <string name="register_warning_password_number">Password must contain at least one number.</string>
    <string name="register_warning_password_structure">Password must contain:\n-at least one number,\n-one upper case,\n-one lower case character.</string>
    <string name="register_warning_username_special_characters">Username can contain only:\n-alphabet characters (A-Z,a-z),\n-numbers (0-9),\n-underscore (_).</string>
    <string name="register_warning_username_length">Username must be at least 3 characters long.</string>
    <string name="register_warning_email_not_valid">Please enter a valid email.</string>
    <string name="register_warning_email_already_used">This email is already in use.</string>
    <string name="register_success">Registration successful.</string>
    <string name="register_error">Registration unsuccessful. Please try again.</string>
    <string name="user_profile">My profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="detect_activity">Detect my activity</string>
    <string name="my_activities">My activities</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_friends">My friends</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="about_author">Author: Rosanda Potrebuješ</string>
    <string name="about_mentor">Mentor: doc. dr. Veljko Pejović</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
</resources>
