<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/menu_icon">
    <group android:id="@+id/grp_1" android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"
            app:showAsAction="never" >
        </item>
        <item
            android:id="@+id/menuProfile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            app:showAsAction="never" />
        <item
            android:id="@+id/menuSettings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_black_18dp"
            app:showAsAction="never" />
        <item
            android:id="@+id/menuAbout"
            android:title="About"
            android:icon="@drawable/ic_info"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/grp_2" android:checkableBehavior="single">
        <item
            android:id="@+id/menuLogout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout_variant"
            app:showAsAction="never" />
    </group>

</menu>