<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.rosa.diplomska.LoginFragment">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_input_top_margin">
        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_alignLeft="@+id/textInputLayoutLoginUsername"
        android:layout_alignStart="@+id/textInputLayoutLoginUsername"
        android:layout_alignTop="@+id/textInputLayoutLoginUsername"
        android:layout_marginTop="@dimen/login_input_top_margin">
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textInputLayoutLoginPassword"
        android:layout_marginTop="@dimen/login_button_top_margin"/>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="@dimen/login_register_top_margin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>